--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ colorama==0.4.6
 contourpy	==1.3.0
 cycler==0.12.1
 filelock==3.13.1
-fonttools==4.55.3=
+fonttools==4.55.3
 fsspec==2024.2.0
 importlib-metadata==8.0.0
 importlib-resources==6.5.2
